--- a/css/portfolio_2.css
+++ b/css/portfolio_2.css
@@ -195,6 +195,17 @@ ul li {
     width: 40%;
 }
 
+.burger {
+    display: none;
+}
+
+.burger div {
+    width: 25px;
+    height: 3px;
+    background-color: #fff;
+    margin: 5px;
+    transition: all 0.3s ease;
+}
 .main {
     display: flex;
     width: 100%;
@@ -334,12 +345,13 @@ span {
 }
 
 .grid-3 div {
-    border: solid 1px black;
+    border: solid 1px #f5f5f5;
 }
 
 .grid-3 p {
     background-color: #fff;
-    padding: 1rem
+    padding: 1rem;
+    
 }
 
 .grid-3 img {
@@ -354,7 +366,7 @@ span {
 
 
 footer {
-    background-color: black;
+    background-color: #3d3d3d;
     color: #fff;
     padding: 1rem;
     text-align: center;
@@ -383,12 +395,43 @@ footer {
     align-items: center;
 }
 
+@media(max-width: 1024px) {
+    .nav-list {
+        width: 40%;
+    }
+}
+
 @media(max-width: 760px) {
-    header {
+    body {
+        overflow-x: hidden;
+    }
+    .nav-list {
+        position: absolute;
+        right: 0px;
+        height: 92vh;
+        top: 8vh;
+        background-color: #3d3d3d; 
         display: flex;
         flex-direction: column;
-        /* background-color: black; */
+        align-items: center;
+        /* width: 100%;
+        height: 50vh; */
+        width: 50%;
+        transform: translateX(100%);
+        transition: transform 0.5s ease-in;
     }
+
+    .nav-list li {
+        opacity: 0;
+    }
+
+    .burger {
+        display: block;
+    }
+    /* header {
+        display: flex;
+        flex-direction: column;
+    } */
 
     .grid {
         grid-template-columns: 1fr;
@@ -417,4 +460,31 @@ footer {
     .main-content h1 {
         font-size: 3.2rem;
     }
+}
+
+.nav-active {
+    transform: translateX(0%);
+}
+
+@keyframes navListFade {
+    from {
+        opacity: 0;
+        transform: translateX(50px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateX(0px);
+    }
+}
+
+.toggle .div-1 {
+    transform: rotate(-45deg) translate(-5px, 6px);
+}
+
+.toggle .div-2 {
+    opacity: 0;
+}
+.toggle .div-3 {
+    transform: rotate(45deg) translate(-5px, -6px);
 }
