--- a/css/portfolio_2.css
+++ b/css/portfolio_2.css
@@ -260,6 +260,26 @@ ul li {
     text-align: center;
 } */
 
+
+.btn {
+    margin-top: 15px;
+    background-color:none;
+    padding: 10px 20px;
+    color: white;
+    border-radius: 10px;
+    border: 1px solid white;
+    font-size: 15px;
+    z-index: 2;
+    position: relative;
+    text-decoration: none;
+    font-size: 15px;
+}
+
+.btn:hover {
+    background-color: #1089E3;
+    border: none;
+}
+
 .main-content h1 {
     font-size: 4.5rem;
     font-weight: bold;
@@ -271,6 +291,7 @@ ul li {
     font-size: 2rem;
     z-index: 2;
     position: relative;
+    margin-bottom: 15px;
 }
 
 span {
@@ -364,6 +385,33 @@ span {
     padding: 1rem;
 }
 
+.contact-grid {
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-gap: 20px;
+    align-items: center;
+    /* line-height: 2rem; */
+}
+
+.contact-grid img {
+    width: 100%;
+}
+
+.contact-grid a {
+    font-size: 2.5rem;
+    color: #1089E3;
+}
+
+form input {
+    border-radius: 5px;
+    border: 1px solid;
+    background-color: #fff;
+    width: 40%;
+    padding: 10px 10px;
+    line-height: 1.3rem;
+    margin-top: 15px;
+    margin-left: 15px;
+}
 
 footer {
     background-color: #3d3d3d;
@@ -393,6 +441,42 @@ footer {
 .div2 {
     flex: 1;
     align-items: center;
+}
+
+.social-links {
+    line-height: 2;
+}
+
+.social-links h2 {
+    font-size: 2rem;
+}
+
+.social-links p {
+    font-size: 1rem;
+}
+
+.social-links a {
+    font-size: 2rem;
+}
+
+.social-links .ig {
+    color: #C13584;
+}
+
+.social-links .fb {
+    color: #4267B2;
+}
+
+.social-links .tw {
+    color: #1DA1F2;    
+}
+
+.social-links .link {
+    color: #2867B2;
+}
+
+.social-links .github {
+    color: #211F1F;
 }
 
 @media(max-width: 1024px) {
@@ -460,6 +544,15 @@ footer {
     .main-content h1 {
         font-size: 3.2rem;
     }
+
+    .contact-grid {
+        grid-template-columns: 1fr;
+        margin-bottom: 2rem;
+    }
+
+    /* .social-links {
+        display: inline-block;
+    } */
 }
 
 .nav-active {
