--- a/css/portfolio_2.css
+++ b/css/portfolio_2.css
@@ -138,6 +138,7 @@ nav ul li {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth !important;
 }
 
 body {
@@ -550,9 +551,9 @@ footer {
         margin-bottom: 2rem;
     }
 
-    /* .social-links {
-        display: inline-block;
-    } */
+    .social-links h2 {
+        font-size: 1.5rem;
+    }
 }
 
 .nav-active {
