Mobile view changes

--- a/css/portfolio_2.css
+++ b/css/portfolio_2.css
@@ -510,6 +510,10 @@ footer {
         opacity: 0;
     }
 
+    .details h2 {
+        font-size: 2rem; 
+    }
+
     .burger {
         display: block;
     }
