--- a/css/portfolio_2.css
+++ b/css/portfolio_2.css
@@ -366,9 +366,9 @@ span {
     margin-bottom: 2rem;
 }
 
-.grid-3 div {
+/* .grid-3 div {
     border: solid 1px #f5f5f5;
-}
+} */
 
 .grid-3 p {
     background-color: #fff;
